--- a/web/client/src/components/MintNFTModal.css
+++ b/web/client/src/components/MintNFTModal.css
@@ -1,9 +1,9 @@
     .modal-Background {
-        background: rgba(32, 35, 41, 0.8);
-        position: fixed;
+        background: rgba(32, 35, 41);
+        /* position: fixed;
         display: flex;
         justify-content: left;
-        align-items: left;
+        align-items: left; */
         color: white;
         text-emphasis-color: white;
     }
